
Sat Sep  6 20:56:56 CEST 2003  David Necas (Yeti) <yeti@physics.muni.cz>
    * libgwyddion/gwyserializable.c (gwy_serialize_check_string):
      changed arguments to include position as the _unpack functions,
      all callers changed

Sat Sep  6 19:04:41 CEST 2003  David Necas (Yeti) <yeti@physics.muni.cz>
    * libgwyddion/gwycontainer.c (gwy_container_set_object):
      fixed increasing refcount by 2 instead of 1
    * libgwyddion/gwyserializable.c (gwy_serializable_deserialize):
      fixed getting wrong type name by not offsetting by position

Sat Sep  6 15:18:30 CEST 2003  David Necas (Yeti) <yeti@physics.muni.cz>
    * libgwyddion/gwytestser.c (gwy_test_ser_finalize):
      added

Tue Sep  2 22:50:08 CEST 2003  David Necas (Yeti) <yeti@physics.muni.cz>
    * libgwyddion/gwyserializable.c (gwy_serialize_check_string),
      libgwyddion/gwycontainer.c (gwy_container_deserialize):
      fixed always checking string from the begining instead from *position
    * libgwyddion/gwyserializable.c (gwy_serialize_unpack_string,
      gwy_serialize_check_string): fixed bogus new position computation

Tue Sep  2 22:16:55 CEST 2003  David Necas (Yeti) <yeti@physics.muni.cz>
    * libgwyddion/gwycontainer.c (gwy_container_deserialize):
      implemented

Tue Sep  2 21:46:20 CEST 2003  David Necas (Yeti) <yeti@physics.muni.cz>
    * libgwyddion/gwycontainer.c (gwy_container_serialize):
      added sentinel to the end, so it's possible to deserialize it
    * libgwyddion/gwycontainer.c (gwy_container_finalize):
      added
    * libgwyddion/gwycontainer.c, libgwyddion/gwycontainer.h:
      added methods acting on strings and objects

Tue Sep  2 21:18:48 CEST 2003  David Necas (Yeti) <yeti@physics.muni.cz>
    * libgwyddion/gwycontainer.h:
      fixed g_quark_try_string() to g_quark_from_string() in `set' methods
