@@ -68,24 +68,44 @@ GwyKeyVal
 <TITLE>GwyContainer</TITLE>
 gwy_container_new
 gwy_container_value_type
-gwy_container_value_type_by_name
+gwy_container_contains
 gwy_container_get_value
 gwy_container_set_value
 gwy_container_set_value_by_name
 gwy_container_delete
-gwy_container_delete_by_name
 gwy_container_foreach
 gwy_container_set_boolean
-gwy_container_set_char
+gwy_container_get_boolean
+gwy_container_set_uchar
+gwy_container_get_char
 gwy_container_set_int32
+gwy_container_get_int32
 gwy_container_set_int64
+gwy_container_get_int64
 gwy_container_set_double
+gwy_container_get_double
+gwy_container_set_string
+gwy_container_get_string
+gwy_container_set_object
+gwy_container_get_object
+gwy_container_value_type_by_name
+gwy_container_contains_by_name
 gwy_container_get_value_by_name
+gwy_container_delete_by_name
 gwy_container_set_boolean_by_name
-gwy_container_set_char_by_name
+gwy_container_get_boolean_by_name
+gwy_container_set_uchar_by_name
+gwy_container_get_char_by_name
 gwy_container_set_int32_by_name
+gwy_container_get_int32_by_name
 gwy_container_set_int64_by_name
+gwy_container_get_int64_by_name
 gwy_container_set_double_by_name
+gwy_container_get_double_by_name
+gwy_container_set_string_by_name
+gwy_container_get_string_by_name
+gwy_container_set_object_by_name
+gwy_container_get_object_by_name
 <SUBSECTION Standard>
 GWY_CONTAINER
 GWY_IS_CONTAINER
